# codex-sdlc

./: .gitignore  AGENTS.md  README.md  install.sh  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/.claude-plugin/: plugin.json
.claude/agents/: architect.md  code-reviewer.md  context-curator.md  engineer.md  manual-tester.md  plan-explainer.md  qa-analyst.md  qa-verifier.md  security-reviewer.md  task-planner.md  walkthrough-author.md
.claude/hooks/: hooks.json
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json
.cursor/agents/: architect.md  code-reviewer.md  context-curator.md  engineer.md  manual-tester.md  plan-explainer.md  qa-analyst.md  qa-verifier.md  security-reviewer.md  task-planner.md  walkthrough-author.md
.cursor/hooks/: hooks.json
.github/workflows/: release.yml  validate.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  git.rs  main.rs  watcher.rs
html-examples/: 01-feature-one-pager.html  02-user-journey.html  03-system-dashboard.html  04-implementation-plan.html  05-implementation-plan.html  README.md
presentation/: outline.md
scripts/: validate.py
skills/generate-brief/: SKILL.md
skills/orchestrate/: SKILL.md
src/agents/: architect.md  code-reviewer.md  context-curator.md  engineer.md  manual-tester.md  plan-explainer.md  qa-analyst.md  qa-verifier.md  security-reviewer.md  (+3 more)
(+34 files in other folders)
