[package]
name = "orchestrate-walkthrough"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
notify = { version = "7", features = ["macos_fsevent"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
